--- a/templog-server/templog-server.cabal
+++ b/templog-server/templog-server.cabal
@@ -29,15 +29,13 @@ source-repository head
 common templog-common
     build-depends:
         base >=4.7 && <5,
-        relude == 0.7.*
+        relude == 1.2.*
 
     default-language: Haskell2010
 
     mixins:
         base hiding (Prelude),
         relude (Relude as Prelude)
-
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N
 
 library
     import: templog-common
@@ -48,13 +46,15 @@ library
         Paths_templog_server,
         Database.Record.TH.SQLite3,
         Database.Relational.Query.SQLite3,
-        Db.Measurement
+        Db.Assignment,
+        Db.Measurement,
+        Types.Esp
     hs-source-dirs:
         src
     build-depends:
-        scotty == 0.11.*,
+        scotty == 0.20.*,
         blaze-html == 0.9.*,
-        aeson == 1.4.*,
+        aeson == 2.1.*,
 
         relational-record == 0.2.*,
         relational-query,
@@ -78,6 +78,8 @@ executable templog-server-exe
     build-depends:
         templog-server
 
+    ghc-options: -threaded -rtsopts -optl-pthread -with-rtsopts=-N
+
 test-suite templog-server-test
     import: templog-common
     type: exitcode-stdio-1.0
@@ -88,3 +90,6 @@ test-suite templog-server-test
         test
     build-depends:
         templog-server
+
+    ghc-options: -threaded -rtsopts -optl-pthread -with-rtsopts=-N
+
