--- a/templog-server/templog-server.cabal
+++ b/templog-server/templog-server.cabal
@@ -1,10 +1,8 @@
-cabal-version: 2.0
+cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.37.0.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 4f50d1b3b07782842d7855a537df7cb516298d46a26060af76558536a8b9f183
 
 name:           templog-server
 version:        0.1.0.0
@@ -35,10 +33,13 @@ library
       Measurements
       Types.Common
       Types.Esp
+      Views.Overview
   other-modules:
       Paths_templog_server
   hs-source-dirs:
       src
+  default-extensions:
+      NoImplicitPrelude
   build-depends:
       HDBC
     , HDBC-session
@@ -49,15 +50,13 @@ library
     , persistable-record
     , relational-query
     , relational-query-HDBC
-    , relational-record ==0.2.*
+    , relational-record
     , relude ==1.2.*
     , scotty ==0.20.*
     , template-haskell
     , text
     , time
-  mixins:
-      base hiding (Prelude)
-    , relude (Relude as Prelude)
+    , wai
   default-language: Haskell2010
 
 executable templog-server-exe
@@ -66,6 +65,8 @@ executable templog-server-exe
       Paths_templog_server
   hs-source-dirs:
       app
+  default-extensions:
+      NoImplicitPrelude
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HDBC
@@ -77,16 +78,14 @@ executable templog-server-exe
     , persistable-record
     , relational-query
     , relational-query-HDBC
-    , relational-record ==0.2.*
+    , relational-record
     , relude ==1.2.*
     , scotty ==0.20.*
     , template-haskell
     , templog-server
     , text
     , time
-  mixins:
-      base hiding (Prelude)
-    , relude (Relude as Prelude)
+    , wai
   default-language: Haskell2010
 
 test-suite templog-server-test
@@ -96,6 +95,8 @@ test-suite templog-server-test
       Paths_templog_server
   hs-source-dirs:
       test
+  default-extensions:
+      NoImplicitPrelude
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HDBC
@@ -107,14 +108,12 @@ test-suite templog-server-test
     , persistable-record
     , relational-query
     , relational-query-HDBC
-    , relational-record ==0.2.*
+    , relational-record
     , relude ==1.2.*
     , scotty ==0.20.*
     , template-haskell
     , templog-server
     , text
     , time
-  mixins:
-      base hiding (Prelude)
-    , relude (Relude as Prelude)
+    , wai
   default-language: Haskell2010
